--- a/who.css
+++ b/who.css
@@ -1,15 +1,18 @@
 /* WHO WE ARE PAGE */
 
-.navbar-default .navbar-nav > .active > [href*="who"] {
+.navbar-default .navbar-nav>.active>[href*="who"] {
   background: #9893cd;
   border-color: #9893cd;
 }
 
-/* WHO WE ARE PAGE */
-
-.navbar-default .navbar-nav > .active > [href*="who"] {
+.navbar-default .navbar-nav>.active>[href*="who"] {
   background: #9893cd;
   border-color: #9893cd;
+}
+
+a:target .collapsed-information-display,
+a:focus .collapsed-information-display {
+  display: block !important;
 }
 
 img.left-edge {
@@ -33,7 +36,7 @@ img.left-edge {
 
 .pamir-feature img {
   height: auto;
-  width: 100%;
+  width: 60%;
   max-height: unset;
   max-width: unset;
   min-height: unset;
@@ -64,7 +67,7 @@ img.left-edge {
   margin-top: 1.563em;
 }
 
-.pamir-bio p + p {
+.pamir-bio p+p {
   display: none;
 }
 
@@ -95,7 +98,7 @@ img.left-edge {
   margin-top: -0.5em;
 }
 
-.person-grid > div {
+.person-grid>div {
   display: inline-block;
   margin: 0.5em;
 }
